fix the navbar alignment

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -825,7 +825,7 @@ a,i, cite, em, var, address, dfn,ol,li,ul{
     margin-right: 0;
  }
   .cs_site_header.cs_style_1 .cs_main_header_right {
-    padding-right: 55px;
+    padding-right: 15px;
  }
   .cs_site_header_full_width .container {
     padding: 0 15px;
@@ -981,8 +981,14 @@ a,i, cite, em, var, address, dfn,ol,li,ul{
     justify-content: center;
  }
   .cs-munu_toggle svg {
-    font-size: 32px;
+    font-size: 36px;
     color: currentColor;
+ }
+  .cs-munu_toggle .hamburger-menu-icon {
+    width: 32px;
+    height: 32px;
+    object-fit: contain;
+    display: block;
  }
   .cs_site_header.cs_style_1 .cs-munu_toggle {
     top: 50%;
@@ -3029,7 +3035,7 @@ ul.accordion {
     /* align-items: center; */
     justify-content: center;
     font-size: 34px;
-    font-weight: 300;
+    font-weight: 500;
     color: #2285A3;
     transition: all 0.6s cubic-bezier(0.4, 0, 0.2, 1);
     line-height: 33px;
@@ -9268,7 +9274,7 @@ p.blog-details-desc.three {
   cursor: pointer;
 }
 .faq-area .accordion li a {
-  padding: 16px 20px 16px 0px;
+  padding: 16px 48px 16px 0px;
   text-decoration: none;
   border-radius: 15px;
   background-color: rgba(255, 255, 255, 0.30196078431372547);
